--- a/mediamtx.yml
+++ b/mediamtx.yml
@@ -1,6 +1,55 @@
-api: yes
+# Enable the RTMP server to receive input streams.
+# MediaMTX will listen on port 1935 by default for RTMP streams.
 rtmp: yes
 
+# Enable the Control API to manage streams dynamically.
+# The API will listen on port 9997 by default.
+api: yes
+
+# Define paths for streams.
+# This example sets up a path named 'mystream' where RTMP publishers can send their streams.
+# The 'source: publisher' indicates that MediaMTX expects an external entity to publish to this path.
 paths:
-    all:
+    mystream:
         source: publisher
+
+# # Define internal users for authentication
+# authInternalUsers:
+#   - user: admin
+#     pass: admin
+#     permissions:
+#       - action: api      # Allows access to the Control API
+#       - action: metrics  # Allows access to the Metrics endpoint
+#       - action: pprof    # Allows access to the PPROF debugging endpoint
+#   - user: any
+#     pass:
+#     permissions:
+#       - action: publish
+#       - action: read
+#       - action: playback
+
+authInternalUsers:
+    # Username. 'any' means any user, including anonymous ones.
+    - user: any
+      # Password. Not used in case of 'any' user.
+      pass:
+      # IPs or networks allowed to use this user. An empty list means any IP.
+      ips: []
+      # List of permissions.
+      permissions:
+          # Available actions are: publish, read, playback, api, metrics, pprof.
+          - action: publish
+            # Paths can be set to further restrict access to a specific path.
+            # An empty path means any path.
+            # Regular expressions can be used by using a tilde as prefix.
+            path:
+          - action: read
+            path:
+          - action: playback
+            path:
+          - action: api
+            path:
+          - action: metrics
+            path:
+          - action: pprof
+            path:
